infrastructure/k8s/product/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: product-deployment
  namespace: prod-ms-product
  labels: 
    app: product
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: product
  template: 
    metadata:
      labels:
        app: product
    spec:
      containers: 
        - name: product
          image: dockeriheme/product
          ports: 
            - containerPort: 3002
