infrastructure/k8s/product/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: prod-ms-product
  labels:
    app : product
spec:
  selector:
    app: product
  ports:
  - port: 3002
    protocol: TCP
  type: NodePort
